Fixing Horizontal Scroll

--- a/Website/css/styles.css
+++ b/Website/css/styles.css
@@ -72,6 +72,7 @@ body{
   background-color: var(--first-color-lighten);
   color: var(--text-color);
   line-height: 1.6;
+  width: 100%;
 }
 
 h1,h2,h3,p{
@@ -126,7 +127,7 @@ img{
   display: grid;
   grid-template-columns: 100%;
   column-gap: 2rem;
-  width: clac(100% -2rem);
+  width: calc(100% -2rem);
   margin-left: var(--mb-2);
   margin-right: var(--mb-2);
 }
